<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.nishant.bear.NotesViewActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_content_ctl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/alabaster">

        <ImageButton
            android:id="@+id/menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/menu_btn_content_description"
            android:onClick="onMenuBTNClicked"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_menu_24dp"
            tools:ignore="VectorDrawableCompat" />

        <ImageButton
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/search_btn_content_description"
            android:onClick="onSearchBTNClicked"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_search_24dp"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/current_tag_name_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avenir_next"
            android:text="@string/current_tag_lbl_text"
            android:textColor="@color/chestnutRose"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/menu_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/menu_btn" />

        <EditText
            android:id="@+id/search_field_txt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/search_bar_background"
            android:fontFamily="@font/avenir_next"
            android:hint="@string/search_field_txt_hint"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/mineShaft"
            android:textColorHint="@color/silverChalice"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/notes_rcy"
            app:layout_constraintEnd_toStartOf="@+id/cancel_search_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cancel_search_btn"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/avenir_next"
            android:onClick="onCancelSearchBTNClicked"
            android:text="@string/cancel_search_btn_text"
            android:textColor="@color/silverChalice"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/notes_rcy"
            app:layout_constraintEnd_toEndOf="@+id/notes_rcy"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/notes_rcy"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_btn"
            tools:listitem="@layout/row_notes_recycler" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_note_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="onAddNoteBTNClicked"
            app:backgroundTint="@color/chestnutRose"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add_note_48dp" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/transparent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/drawer_menu_ctl"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:background="@color/mineShaft"
            tools:showIn="@layout/activity_notes_view">

            <TextView
                android:id="@+id/app_name_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/avenir_next"
                android:text="@string/app_name"
                android:textColor="@color/abbey"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/notes_bar_lin"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:onClick="onNotesBarLINClicked"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_name_lbl">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:contentDescription="@string/notes_bar_img_content_description"
                    app:srcCompat="@drawable/ic_note_32dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/avenir_next"
                    android:text="@string/notes_bar_lbl_text"
                    android:textColor="@color/silverChalice"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/trash_bar_lin"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:onClick="onTrashBarLINClicked"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notes_bar_lin">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:contentDescription="@string/trash_bar_img_content_description"
                    app:srcCompat="@drawable/ic_trash_32dp_silver_chalice" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/avenir_next"
                    android:text="@string/trash_bar_lbl_text"
                    android:textColor="@color/silverChalice"
                    android:textSize="14sp" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/tags_rcy"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trash_bar_lin"
                tools:listitem="@layout/row_tags_recycler" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/settings_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onSettingsBTNClicked"
                app:backgroundTint="@color/capeCod"
                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_settings_48dp" />

        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>